# cyntactic

./: CMakeLists.txt  Catch.cmake  grammar.y
include/: ast.hpp  exceptions.hpp  node.hpp  parser.hpp  program.hpp  symbols.hpp  textbox.hpp  tokenizer.hpp  trie.hpp
include/ast/: binexpr.hpp  identifier.hpp  import.hpp  literal.hpp  number.hpp  vardecl.hpp
src/: ast.cpp  main.cpp  node.cpp  parser.cpp  program.cpp  symbols.cpp  textbox.cpp  tokenizer.cpp  trie.cpp
src/ast/: binexpr.cpp  identifier.cpp  import.cpp  literal.cpp  number.cpp  type.cpp
